devops-setup/pricing-gitops/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-v1
  namespace: pricing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing
      version: v1
  template:
    metadata:
      labels:
        app: pricing
        version: v1
    spec:
      containers:
        - name: app
          image: pricing-service:latest
          imagePullPolicy: Never
